<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/done"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amangautam.bmicalculator.MainActivity"
    >

<android.support.v7.widget.Toolbar
    android:id="@+id/tool"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/bg3"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    >


</android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/height"
        android:hint="@string/height"
        android:textColorHint="@color/colorAccent"
        android:ems="20"
        android:background="@drawable/shape"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="100dp"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_grp_h"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feets"
            android:layout_marginTop="165dp"
            android:text="@string/feets"
           android:textSize="20dp"
            android:layout_marginLeft="60dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cm"
            android:text="@string/cm"
            android:layout_marginTop="165dp"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/weight"
        android:hint="@string/weight"
        android:textColorHint="@color/colorAccent"
        android:ems="20"
        android:background="@drawable/shape"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_grp_w"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kg"
            android:layout_marginTop="260dp"
            android:textSize="25dp"
            android:text="@string/kg"
            android:layout_marginLeft="100dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbs"
            android:text="@string/lb"
            android:textSize="25dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="20dp"
            />

    </RadioGroup>
    <Button
        android:id="@+id/btnClick"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="290dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bmi"
        android:text="@string/bmi"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:layout_marginTop="480dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:layout_below="@+id/text1"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text3"
        android:layout_below="@+id/text2"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text4"
        android:layout_below="@+id/text3"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoW"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoH"
        android:textSize="15sp"
        android:layout_marginLeft="150sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        />
          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_alignBottom="@+id/tool"
              android:layout_alignParentTop="true"
              android:layout_marginLeft="5dp"
              android:src="@drawable/logo"
              />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tool"
        android:layout_marginLeft="60dp"
        android:text="@string/app_name"
        android:textSize="23dp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        />

</RelativeLayout>

</ScrollView>
